--- a/local/.env
+++ b/local/.env
@@ -5,7 +5,7 @@ APP_KEY=MnPA0eXf9lvFDhhTQJJxFeCcXfRwObwn
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=job_module
+DB_DATABASE=rolling_access
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -17,12 +17,19 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+#MAIL_DRIVER=smtp
+#MAIL_HOST=smtp.mailtrap.io
+#MAIL_PORT=25
+#MAIL_USERNAME=02a960d26f645b
+#MAIL_PASSWORD=b0bfcc694c8321
+#MAIL_ENCRYPTION=
+
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=25
-MAIL_USERNAME=02a960d26f645b
-MAIL_PASSWORD=b0bfcc694c8321
-MAIL_ENCRYPTION= 
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=iorchidian@gmail.com
+MAIL_PASSWORD=bim@orchid5
+MAIL_ENCRYPTION=tls
 
 META_TITLE=
 META_KEYWORD=
