--- a/local/.env
+++ b/local/.env
@@ -24,10 +24,19 @@ REDIS_PORT=6379
 #MAIL_PASSWORD=b0bfcc694c8321
 #MAIL_ENCRYPTION=
 
-
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=iorchidian@gmail.com
+MAIL_PASSWORD=bim@orchid5
+MAIL_ENCRYPTION=tls
 
 META_TITLE=
 META_KEYWORD=
 META_DESCRIPTION=
 META_IMAGE=
 
+GOOGLE_CLIENT_ID=216951765229-fhfruohpa8del47gjoadqnqurg7c3ku2.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=zkmTHYw5wr6sxMtgz5lStBNz
+GOOGLE_REFRESH_TOKEN=1//03mM5DoYKfZwwCgYIARAAGAMSNwF-L9IrU9oRFPTJ3XN8zj3r6SwZ4YR_Ot-VN4b1WHsBQ3nXs00Ur4HISeYLiTbTilLKTZD9t8M
+GOOGLE_DRIVE_FOLDER_ID=1uSA386lPj6eHGH_fzj0iuphouozGi66p
