--- a/local/composer.json
+++ b/local/composer.json
@@ -17,7 +17,8 @@
         "ext-json": "*",
         "google/apiclient": "2.0",
         "nao-pon/flysystem-google-drive": "^1.1",
-        "dacastro4/laravel-gmail": "^2.0"
+        "dacastro4/laravel-gmail": "^2.0",
+        "spatie/dropbox-api": "^1.14"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
